--- a/index.html
+++ b/index.html
@@ -3,9 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel= "stylesheet" href= "https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" >
+    <link rel="icon" href="https://unread.today/img/favicon-32x32.png">
+    <link rel="stylesheet" href="styles.css">
+    <title>Нүүр | Unread Today</title>
 </head>
 <body>
-    
+    <header>
+        <div class="header">
+            <span class="las la-bars" id="bar-icon"></span>
+            <img src="asset/logo.png" class="logo">
+        </div>
+    </header>
+    <div class="slider-container">
+        <div class="slider">
+            <div class="Item" style="background: linear-gradient(rgba(0,0,0,0) -10%,#000000 150%), url(asset/item1.jpeg);">
+                <div class="item-header">
+                    <div class="liveDot"></div>
+                    <p>1 мин</p>
+                </div>
+                <div class="item-content">
+                    <div><span class="las la-eye"></span>3525<span class="las la-comment-alt"></span>0</div>
+                    <h2>Гэрэл зурагчин Макс Мюнх</h2>
+                    <div class="category">Би хэрхэн ажилладаг вэ?</div>
+                </div>
+            </div>
+            <div class="Item" style="background: linear-gradient(rgba(0,0,0,0) -10%,#000000 150%), url(asset/item2.jpeg);">
+                <div class="item-header">
+                    <div class="liveDot"></div>
+                    <p>8 мин</p>
+                </div>
+                <div class="item-content">
+                    <div><span class="las la-eye"></span>10153<span class="las la-comment-alt"></span>0</div>
+                    <h2> Гадаад хэл сурахад нас оройтдог уу? + Шинжлэх ухааны 5 баримт </h2>
+                    <div class="category"> Мэдүүштэй </div>
+                </div>
+            </div>
+            <div class="Item" style="background: linear-gradient(rgba(0,0,0,0) -10%,#000000 150%), url(asset/item3.jpeg);">
+                <div class="item-header">
+                    <div class="liveDot"></div>
+                    <p>2 мин</p>
+                </div>
+                <div class="item-content">
+                    <div><span class="las la-eye"></span>5677<span class="las la-comment-alt"></span>0</div>
+                    <h2>Биднийг унтаж байхад Meta-гийн танилцуулсан бүх зүйл</h2>
+                    <div class="category">techworm</div>
+                </div>
+            </div>
+            <div class="Item" style="background: linear-gradient(rgba(0,0,0,0) -10%,#000000 150%), url(asset/item4.jpeg);">
+                <div class="item-header">
+                    <div class="liveDot"></div>
+                    <p>3 мин</p>
+                </div>
+                <div class="item-content">
+                    <div><span class="las la-eye"></span>2947<span class="las la-comment-alt"></span>0</div>
+                    <h2>Сониноос сорчилъё: УЛААН vs БААТАР /2024.09.23/</h2>
+                    <div class="category">Мэдүүштэй</div>
+                </div>
+            </div>
+            <div class="Item" style="background: linear-gradient(rgba(0,0,0,0) -10%,#000000 150%), url(asset/item5.jpeg);">
+                <div class="item-header">
+                    <div class="liveDot"></div>
+                    <p>6 мин</p>
+                </div>
+                <div class="item-content">
+                    <div><span class="las la-eye"></span>19407<span class="las la-comment-alt"></span>0</div>
+                    <h2>Яг одоо туршаад үз: iOS 18-аас онцлох 18 өөрчлөлт</h2>
+                    <div class="category">techworm</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="hero">
+
+    </div>
 </body>
 </html>
