--- a/index.html
+++ b/index.html
@@ -15,70 +15,101 @@
     <header>
         <div class="header">
             <span class="las la-bars" id="bar-icon"></span>
-            <img src="asset/logo.png" class="logo">
+            <div class="mid-nav">
+                <div class="left-nav">
+                    <img src="asset/logo.png" class="logo">
+                    <p>|</p>
+                    <div style="display: flex;">
+                        <span class="las la-search" id="search"></span>
+                        <input placeholder="Хайлт хийх" id="search-input">
+                    </div>
+                </div>
+                <div class="right-nav">
+                    <p>Дараагийн нийтлэл:</p>
+                    <div class="category" style="background-color: transparent;font-size: 20px;">techworm</div>
+                    <div class="live">Маргааш орно <div class="liveDot"></div></div>
+                </div>
+            </div>
+            <div class="left-nav">
+                <span class="lab la-facebook-square"></span>
+                <span class="lab la-instagram"></span>
+                <span class="lab la-twitter"></span>
+                <span class="lab la-linkedin-in"></span>
+            </div>
         </div>
     </header>
-    <div class="slider-container">
-        <div class="slider">
-            <div class="Item" style="background: linear-gradient(rgba(0,0,0,0) -10%,#000000 150%), url(asset/item1.jpeg);">
-                <div class="item-header">
-                    <div class="liveDot"></div>
-                    <p>1 мин</p>
-                </div>
-                <div class="item-content">
-                    <div><span class="las la-eye"></span>3525<span class="las la-comment-alt"></span>0</div>
-                    <h2>Гэрэл зурагчин Макс Мюнх</h2>
-                    <div class="category">Би хэрхэн ажилладаг вэ?</div>
-                </div>
+    <div class="hero">
+    </div>
+    <div class="scroll-background">
+        <div class="editors-choice">
+            <p>Редакцын сонголт</p>
+            <div class="pre-and-next">
+                <span class="las la-angle-left"></span>
+                <span class="las la-angle-right"></span>
             </div>
-            <div class="Item" style="background: linear-gradient(rgba(0,0,0,0) -10%,#000000 150%), url(asset/item2.jpeg);">
-                <div class="item-header">
-                    <div class="liveDot"></div>
-                    <p>8 мин</p>
+        </div>
+        <div class="slider-container">
+            <div class="slider">
+                <div class="Item" style="background: linear-gradient(rgba(0,0,0,0) -10%,#000000 150%), url(asset/item1.jpeg);">
+                    <div class="item-header">
+                        <div class="liveDot"></div>
+                        <p>1 мин</p>
+                    </div>
+                    <div class="item-content">
+                        <div><span class="las la-eye"></span>3525<span class="las la-comment-alt"></span>0</div>
+                        <h2>Гэрэл зурагчин Макс Мюнх</h2>
+                        <div class="category">Би хэрхэн ажилладаг вэ?</div>
+                    </div>
                 </div>
-                <div class="item-content">
-                    <div><span class="las la-eye"></span>10153<span class="las la-comment-alt"></span>0</div>
-                    <h2> Гадаад хэл сурахад нас оройтдог уу? + Шинжлэх ухааны 5 баримт </h2>
-                    <div class="category"> Мэдүүштэй </div>
+                <div class="Item" style="background: linear-gradient(rgba(0,0,0,0) -10%,#000000 150%), url(asset/item2.jpeg);">
+                    <div class="item-header">
+                        <div class="liveDot"></div>
+                        <p>8 мин</p>
+                    </div>
+                    <div class="item-content">
+                        <div><span class="las la-eye"></span>10153<span class="las la-comment-alt"></span>0</div>
+                        <h2> Гадаад хэл сурахад нас оройтдог уу? + Шинжлэх ухааны 5 баримт </h2>
+                        <div class="category"> Мэдүүштэй </div>
+                    </div>
                 </div>
-            </div>
-            <div class="Item" style="background: linear-gradient(rgba(0,0,0,0) -10%,#000000 150%), url(asset/item3.jpeg);">
-                <div class="item-header">
-                    <div class="liveDot"></div>
-                    <p>2 мин</p>
+                <div class="Item" style="background: linear-gradient(rgba(0,0,0,0) -10%,#000000 150%), url(asset/item3.jpeg);">
+                    <div class="item-header">
+                        <div class="liveDot"></div>
+                        <p>2 мин</p>
+                    </div>
+                    <div class="item-content">
+                        <div><span class="las la-eye"></span>5677<span class="las la-comment-alt"></span>0</div>
+                        <h2>Биднийг унтаж байхад Meta-гийн танилцуулсан бүх зүйл</h2>
+                        <div class="category">techworm</div>
+                    </div>
                 </div>
-                <div class="item-content">
-                    <div><span class="las la-eye"></span>5677<span class="las la-comment-alt"></span>0</div>
-                    <h2>Биднийг унтаж байхад Meta-гийн танилцуулсан бүх зүйл</h2>
-                    <div class="category">techworm</div>
+                <div class="Item" style="background: linear-gradient(rgba(0,0,0,0) -10%,#000000 150%), url(asset/item4.jpeg);">
+                    <div class="item-header">
+                        <div class="liveDot"></div>
+                        <p>3 мин</p>
+                    </div>
+                    <div class="item-content">
+                        <div><span class="las la-eye"></span>2947<span class="las la-comment-alt"></span>0</div>
+                        <h2>Сониноос сорчилъё: УЛААН vs БААТАР /2024.09.23/</h2>
+                        <div class="category">Мэдүүштэй</div>
+                    </div>
                 </div>
-            </div>
-            <div class="Item" style="background: linear-gradient(rgba(0,0,0,0) -10%,#000000 150%), url(asset/item4.jpeg);">
-                <div class="item-header">
-                    <div class="liveDot"></div>
-                    <p>3 мин</p>
-                </div>
-                <div class="item-content">
-                    <div><span class="las la-eye"></span>2947<span class="las la-comment-alt"></span>0</div>
-                    <h2>Сониноос сорчилъё: УЛААН vs БААТАР /2024.09.23/</h2>
-                    <div class="category">Мэдүүштэй</div>
-                </div>
-            </div>
-            <div class="Item" style="background: linear-gradient(rgba(0,0,0,0) -10%,#000000 150%), url(asset/item5.jpeg);">
-                <div class="item-header">
-                    <div class="liveDot"></div>
-                    <p>6 мин</p>
-                </div>
-                <div class="item-content">
-                    <div><span class="las la-eye"></span>19407<span class="las la-comment-alt"></span>0</div>
-                    <h2>Яг одоо туршаад үз: iOS 18-аас онцлох 18 өөрчлөлт</h2>
-                    <div class="category">techworm</div>
+                <div class="Item" style="background: linear-gradient(rgba(0,0,0,0) -10%,#000000 150%), url(asset/item5.jpeg);">
+                    <div class="item-header">
+                        <div class="liveDot"></div>
+                        <p>6 мин</p>
+                    </div>
+                    <div class="item-content">
+                        <div><span class="las la-eye"></span>19407<span class="las la-comment-alt"></span>0</div>
+                        <h2>Яг одоо туршаад үз: iOS 18-аас онцлох 18 өөрчлөлт</h2>
+                        <div class="category">techworm</div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="hero">
+    <footer>
 
-    </div>
+    </footer>
 </body>
 </html>
