build a hero section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <div class="live">Маргааш орно <div class="liveDot"></div></div>
                 </div>
             </div>
-            <div class="left-nav">
+            <div class="social-icons">
                 <span class="lab la-facebook-square"></span>
                 <span class="lab la-instagram"></span>
                 <span class="lab la-twitter"></span>
@@ -39,6 +39,34 @@
         </div>
     </header>
     <div class="hero">
+        <div class="hero-content">
+            <div class="hero-img">  
+                <img src="asset/heroImg.jpeg">
+            </div>
+            <div class="hero-text">
+                <h5>Өнөөдөр</h5>
+                <div class="hero-type">
+                    Мэдүүштэй
+                </div>
+                <h1>Сониноос сорчилъё: Тоо юу? Сүлд үү? /2024.10.14/</h1>
+                <div class="account">
+                    <div class="accImg">
+                        <img src="asset/accImg.jpeg">
+                    </div>
+                    <div>
+                        <div class="account-name">
+                            Tushigt-Erdene
+                        </div>
+                        <div class="account-date">
+                            10 сарын 14, 2024
+                            <div class="liveDot" style="background-color: white;">
+                            </div>
+                            2 мин
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="scroll-background">
         <div class="editors-choice">
