--- a/index.html
+++ b/index.html
@@ -136,8 +136,144 @@
             </div>
         </div>
     </div>
+    <main>
+        <div>
+            <div class="account">
+                <img src="asset/profile1.jpeg" class="accImg">
+                <div>
+                    <div class="account-name" style="color: black;">
+                        Purevdorj
+                    </div>
+                    <div class="account-date" style="color: var(--text-gray);">
+                        10 сарын 14, 2024
+                        <div class="liveDot" style="background-color: var(--text-gray);">
+                        </div>
+                        4 мин
+                    </div>
+                </div>
+            </div>
+            <div class="content-item-main">
+                <div class="liveDot" style="margin-top: 4px;"></div>
+                <div style="margin-left: 10px;flex: 1;">
+                    <div class="content-item-category">Мэдүүштэй</div>
+                    <h1>10 тоонд: Нобелийн шагнал</h1>
+                </div>
+                <img src="asset/main1.jpeg" class="main-img">
+            </div>
+        </div>
+        <div class="content-item-right">
+            <div class="account">
+                <img src="asset/profile1.jpeg" class="accImg">
+                <div>
+                    <div class="account-name" style="color: black;">
+                        Purevdorj
+                    </div>
+                    <div class="account-date" style="color: var(--text-gray);">
+                        10 сарын 14, 2024
+                        <div class="liveDot" style="background-color: var(--text-gray);">
+                        </div>
+                        4 мин
+                    </div>
+                </div>
+            </div>
+            <div class="content-item-main">
+                <div class="liveDot" style="margin-top: 4px;"></div>
+                <div style="margin-left: 10px;flex: 1;">
+                    <div class="content-item-category">Мэдүүштэй</div>
+                    <h1>10 тоонд: Нобелийн шагнал</h1>
+                </div>
+                <img src="asset/main1.jpeg" class="main-img">
+            </div>
+        </div>
+        <div>
+            <div class="account">
+                <img src="asset/profile1.jpeg" class="accImg">
+                <div>
+                    <div class="account-name" style="color: black;">
+                        Purevdorj
+                    </div>
+                    <div class="account-date" style="color: var(--text-gray);">
+                        10 сарын 14, 2024
+                        <div class="liveDot" style="background-color: var(--text-gray);">
+                        </div>
+                        4 мин
+                    </div>
+                </div>
+            </div>
+            <div class="content-item-main">
+                <div class="liveDot" style="margin-top: 4px;"></div>
+                <div style="margin-left: 10px;flex: 1;">
+                    <div class="content-item-category">Мэдүүштэй</div>
+                    <h1>10 тоонд: Нобелийн шагнал</h1>
+                </div>
+                <img src="asset/main1.jpeg" class="main-img">
+            </div>
+        </div>
+        <div class="content-item-right">
+            <div class="account">
+                <img src="asset/profile1.jpeg" class="accImg">
+                <div>
+                    <div class="account-name" style="color: black;">
+                        Purevdorj
+                    </div>
+                    <div class="account-date" style="color: var(--text-gray);">
+                        10 сарын 14, 2024
+                        <div class="liveDot" style="background-color: var(--text-gray);">
+                        </div>
+                        4 мин
+                    </div>
+                </div>
+            </div>
+            <div class="content-item-main">
+                <div class="liveDot" style="margin-top: 4px;"></div>
+                <div style="margin-left: 10px;flex: 1;">
+                    <div class="content-item-category">Мэдүүштэй</div>
+                    <h1>10 тоонд: Нобелийн шагнал</h1>
+                </div>
+                <img src="asset/main1.jpeg" class="main-img">
+            </div>
+        </div>
+        <div>
+            <div class="account">
+                <img src="asset/profile1.jpeg" class="accImg">
+                <div>
+                    <div class="account-name" style="color: black;">
+                        Purevdorj
+                    </div>
+                    <div class="account-date" style="color: var(--text-gray);">
+                        10 сарын 14, 2024
+                        <div class="liveDot" style="background-color: var(--text-gray);">
+                        </div>
+                        4 мин
+                    </div>
+                </div>
+            </div>
+            <div class="content-item-main">
+                <div class="liveDot" style="margin-top: 4px;"></div>
+                <div style="margin-left: 10px;flex: 1;">
+                    <div class="content-item-category">Мэдүүштэй</div>
+                    <h1>10 тоонд: Нобелийн шагнал</h1>
+                </div>
+                <img src="asset/main1.jpeg" class="main-img">
+            </div>
+        </div>
+    </main>
     <footer>
-
+        <div class="main-bottom">
+        </div>
+        <div>
+            <div>
+                <img src="asset/logo.png" class="logo">
+            </div>
+        </div>
+        <div class="footer-icons">
+            <span class="lab la-facebook-square"></span>
+            <span class="lab la-twitter"></span>
+            <span class="lab la-instagram"></span>
+            <span class="lab la-linkedin-in"></span>
+            <span class="lab la-youtube"></span>
+            <span class="lab la-soundcloud"></span>
+        </div>
     </footer>
 </body>
 </html>
