--- a/index.html
+++ b/index.html
@@ -261,9 +261,92 @@
     <footer>
         <div class="main-bottom">
         </div>
-        <div>
+        <div class="footer-contents">
             <div>
-                <img src="asset/logo.png" class="logo">
+                <div>
+                    <img src="asset/logo.png" class="logo">
+                </div>
+                <div class="requests">
+                    <div class="request">
+                        <div class="textandbutton">
+                            <div class="request-text">
+                                <h6>
+                                    Хамтран ажиллах хүсэлт илгээх
+                                </h6>
+                                Контент нийтлүүлэх          
+                            </div>
+                            <div class="circle-button">
+                                <span class="las la-angle-right"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="request">
+                        <div class="textandbutton">
+                            <div class="request-text">
+                                <h6>
+                                    Хамтран ажиллах хүсэлт илгээх
+                                </h6>
+                                Эвент дээр хамтрах         
+                            </div>
+                            <div class="circle-button">
+                                <span class="las la-angle-right"></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="stores">
+                    <img src="asset/playStore.png" alt="">
+                    <img src="asset/appStore.png" alt="">
+                </div>
+            </div>
+            <div class="footer-right">
+                <div class="footer-title">
+                    Редакцын бодлого
+                    <div class="liveDot" style="background-color: white;"></div>
+                    Блог
+                    <div class="liveDot" style="background-color: white;"></div>
+                    Ажлын байр
+                    <div class="liveDot" style="background-color: white;"></div>
+                    Холбогдох
+                </div>
+                <div class="copyright">
+                    © 2015-2024 Анрид Медиа ХХК. Бүх эрх хуулиар хамгаалагдсан. Контентуудыг зөвшөөрөлгүйгээр болон дурдалгүйгээр нийтлэх, хэвлэх, эш татахыг хориглоно.
+                </div>
+                <div class="three-columns">
+                    <div class="column">
+                        <h4>Булангууд</h4>
+                        <p>Онцлох бизнес</p>
+                        <p>Techworm</p>
+                        <p>Би хэрхэн ажилладаг вэ?</p>
+                        <p>Мэдүүштэй</p>
+                        <p>Чөлөөт</p>
+                        <p>Номын тухай</p>
+                        <p>7 хоногийн тойм</p>
+                        <p>Өртөөлөгчид</p>
+                    </div>
+                    <div class="column">
+                        <h4>Булангууд</h4>
+                        <p>Онцлох бизнес</p>
+                        <p>Techworm</p>
+                        <p>Би хэрхэн ажилладаг вэ?</p>
+                        <p>Мэдүүштэй</p>
+                        <p>Чөлөөт</p>
+                        <p>Номын тухай</p>
+                        <p>7 хоногийн тойм</p>
+                        <p>Өртөөлөгчид</p>
+                    </div>
+                    <div class="column">
+                        <h4>Булангууд</h4>
+                        <p>Онцлох бизнес</p>
+                        <p>Techworm</p>
+                        <p>Би хэрхэн ажилладаг вэ?</p>
+                        <p>Мэдүүштэй</p>
+                        <p>Чөлөөт</p>
+                        <p>Номын тухай</p>
+                        <p>7 хоногийн тойм</p>
+                        <p>Өртөөлөгчид</p>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="footer-icons">
